new branch added

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                             How it all started
                         </h2>
                         <div class="md:flex justify-between pb-4 text-2xl bg-slate-900/50">
-                            Bazzlylinks is a software firm that develops websites, thus we have to develope websites
+                            Bazzlylinks is a software firm that develops websites, thus we have to develop websites
                             for many of customers, which
                             means we have to build quickly to fulfill delivery schedules. The business saw an increase
                             in clients who needed
