--- a/contact.html
+++ b/contact.html
@@ -111,9 +111,10 @@
                                             d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
                                     </svg>
 
-                                    <p>Address <br> <span class="text-gray-900">No 2 sokenu road sapon abeokuta, ogun
-                                            state,
-                                            Nigeria.</span>
+                                    <p>Address <br> <span class="text-gray-900">3RD FLOOR, J.OLU BUILDING, 3, ITOKO ROAD AKE, BAASALA COMP <br>
+                                        ABEOKUTA, <br>
+                                        OGUN STATE, <br>
+                                        NIGERIA</span>
                                     </p>
                                 </div>
 
@@ -193,11 +194,7 @@
 
 
 
-                        <div class="text-center py-10">
-                            <a href="features.html"
-                                class="py-2 px-8 bg-green-400 hover:bg-green-200 hover:text-gray-800 border-x-2 border-x-white shadow-sm shadow-slate-100 ">More
-                                features </a>
-                        </div>
+           
 
                     </div>
 
