Added two more features

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </span>
                     <br>
                     <span>WebAPP</span>
-                    <span class=" text-green-400">Version 1.1</span>
+                    <span class=" text-green-400">Version 1.1_beta</span>
 
 
                 </div>
