Correct spelling error

--- a/features.html
+++ b/features.html
@@ -116,7 +116,7 @@
                                 </svg>
 
 
-                                <span>InApp chat messenger for communucation between staff and employee</span>
+                                <span>InApp chat messenger for communucation between staff and employer</span>
                             </div>
                             <!-- Box child section start here -->
                             <div
